# GetMyBru

./: README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.md
Common/Icons/: AButton.xcf  BButton.xcf  Icon128.xcf  Icon256.xcf  Icon32.xcf  XButton.xcf
Common/Updates/: Meta.json
Source/GUI/GetmyBruQt/: CMakeLists.txt  GetmyBruQt_en_US.ts  main.qml  qml.qrc
Source/GUI/build-GetmyBruQt-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  GetmyBruQt  GetmyBruQt.cbp  build.ninja  cmake_install.cmake  qtcsettings.cmake  rules.ninja
Source/GUI/build-GetmyBruQt-Desktop-Debug/GetmyBruQt_autogen/: moc_predefs.h
Source/GUI/build-GetmyBruQt-Desktop-Debug/GetmyBruQt_autogen/EWIEGA46WW/: qrc_qml.cpp
Source/GetMyBru/: GetMyBru.sln
Source/GetMyBru/GetMyBru/: App.config  GetMyBru.csproj  Program.cs  packages.config
Source/GetMyBru/GetMyBru/GetMyBru.Core/: CacheCheck.cs
Source/GetMyBru/GetMyBru/GetMyBru.Core/Config/: ConfigParser.cs  IConfigParser.cs
Source/GetMyBru/GetMyBru/GetMyBru.Core/Installer/: IHomebrewList.cs  IServiceInstall.cs
Source/GetMyBru/GetMyBru/GetMyBru.Core/Logging/: IConsolePercent.cs  ILogging.cs
Source/GetMyBru/GetMyBru/GetMyBru.GUI/: FmHomebrewInfo.Designer.cs  FmHomebrewInfo.cs  FmSelectSystem.Designer.cs  FmSelectSystem.cs  FmSelectSystem.resx
Source/GetMyBru/GetMyBru/GetMyBru.GUI/Switch/: FmSwitchMain.Designer.cs  (+2 more)
Source/GetMyBru/GetMyBru/GetMyBru.Services/: SvcGetIcons.cs  SvcUpdate.cs
Source/GetMyBru/GetMyBru/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
(+16 files in other folders)
